--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -128,6 +128,7 @@ header {
 // Background Image
 #backgroundImage {
   background-image: url(../img/pluto.jpg);
+  background-position: right;
   // font-family: 'Rock Salt', cursive;
   color: white;
   text-shadow: #000 0px 0px 1px,   #000 0px 0px 1px,   #000 0px 0px 1px,
